<resources>
    <string name="app_name">WaaghGamesTracker</string>
    <string name="prefs_file">com.vicentjordi.waaghgamestracker.PREFERENCE_FILE_KEY</string>

    <!-- Strings relacionadas con el logIn/signUp menu-->
    <string name="menuInico">Inico</string>
    <string name="menuListas">Listas de ejercitos</string>
    <string name="menuPartidas">Reporte de Batalla</string>
    <string name="menuSalir">Salir</string>

    <!-- Strings relacionadas con el logIn/signUp menu-->
    <string name="btnLogin">Log In</string>
    <string name="btnRegister">Sing Up</string>
    <string name="txtEmail">Email</string>
    <string name="txtContrasenya">Contraseña</string>
    <string name="TxtRepetirContrasenya">Repite la contraseña</string>
    <string name="txtOlvidarContrasenya">Olvidaste la contraseña?</string>
    <string name="txtO">O</string>

    <!-- Strings relacionadas con el menu lateral -->
    <string name="abrir">Abrir Nav Drawer</string>
    <string name="cerrar">Cerrar Nav Drawer</string>

    <!-- Fragment Inicio -->
    <string name="Incio">Inicio</string>
    <string name="Bienvenido">Bienvenido a WaaghGames: Tracker</string>
    <string name="lblListas">Tus Listas mas Recientes</string>
    <string name="btnVerListas">Ver Listas</string>
    <string name="lblPartidas">Informes de Batalla</string>
    <string name="btnVerPartidas">Ver Informes</string>

    <!-- Fragment Listas -->
    <string name="TusListas">Tus Listas</string>
    <string name="txtFiltrarListas">Filtrar Listas por:</string>

    <!-- Activity Crear Listas -->
    <string name="CrearLista">Listas</string>
    <string name="NombreLista">Nombre de la Lista</string>

    <!-- Fragment Partidas -->
    <string name="Partidas">Tus Informes de Batalla</string>
    <string name="nomJugador1">Jugador 1</string>
    <string name="nomJugador2">Jugador 2</string>
    <string name="Cp">CP</string>
    <string name="faccion">Seleccionar la faccion ....</string>
    <string name="pintado">El ejecercito esta listo (10 puntos)</string>

    <!-- Strings relacionadas con mensajesError -->
    <string name="camposVacios">Algún campo está vacío.</string>
    <string name="errorRegistro">Ha ocurrido un error al registrar el Usuario.</string>
    <string name="errorLogin">El correo o la contraseña introducida es incorrecta.</string>
    <string name="usuarioExiste">El correo ya existe.</string>
    <string name="contrasenyaDiferente">Las contraseñas no coinciden.</string>
    <string name="contrasenyaCorta">La contraseña es muy Corta. Debe tener 6 caracteres mínimo.</string>
    <string name="errorFaccion">Algún jugador no ha escogido facción</string>
    <string name="errorCP">Solo se admiten números como valores válidos en el campo "CP" </string>
    <string name="errorPartida">Este es un mensaje de error para la partida.</string>
    <string name="sinFaccion">Selecciona una faccion para poder buscar la mini</string>

    <!-- Facciones -->
    <string name="templarios">Templarios Negros</string>
    <string name="sangrientos">Ángeles Sangrientos</string>
    <string name="oscuros">Ángeles Oscuros</string>
    <string name="vigias">Vigías de la Muerte</string>
    <string name="caballeros">Caballeros Grises</string>
    <string name="punyos">Puños Imperiales</string>
    <string name="manos">Manos de Hierro</string>
    <string name="guardia">Guardia del Cuervo</string>
    <string name="salamandras">Salamandras</string>
    <string name="lobos">Lobos Espaciales</string>
    <string name="ultramarines">Ultramarines</string>
    <string name="cicatrices">Cicatrices Blancas</string>
    <string name="sororitas">Adeptas Sororitas</string>
    <string name="custodes">Adeptus Custodes</string>
    <string name="mechanicus">Adeptus Mechanicus</string>
    <string name="militarum">Astra Militarum</string>
    <string name="imperiales">Caballeros Imperiales</string>
    <string name="inquisidores">Inquisidores</string>
    <string name="assassinorum">Officio Assassinorum</string>
    <string name="demonios">Demonios del Caos</string>
    <string name="caos">Caballeros Imperiales del Caos</string>
    <string name="marinesCaos">Marines del Caos</string>
    <string name="guardiaMuerte">Guardia de la Muerte</string>
    <string name="milHijos">Mil Hijos</string>
    <string name="devoradores">Devoradores de Mundos</string>
    <string name="aeldar">Aeldari</string>
    <string name="drukhari">Drukhari</string>
    <string name="genestealer">Cultos Genestealer</string>
    <string name="tiranidos">Tiranidos</string>
    <string name="necornes">Necrones</string>
    <string name="tau">Imperio T au</string>
    <string name="orcos">Orcos</string>

</resources>