<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/inicioFragment"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menuInico"/>
        <item android:id="@+id/listasFragment"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menuListas"/>
        <item android:id="@+id/partidasFragment"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menuPartidas"/>
    </group>
    <group android:checkableBehavior="single">
        <item android:id="@+id/salir"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/menuSalir"/>
    </group>
</menu>