<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgorundApp"
    android:orientation="vertical">

    <!-- Primer LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edNombreJ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/textoSecundario"
            android:hint="@string/nomJugador1" />

        <EditText
            android:id="@+id/edPuntosComandoJ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:textColor="@color/textoSecundario"
            android:inputType="number"
            android:hint="@string/Cp" />

        <TextView
            android:id="@+id/faccionJ1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/faccion"
            android:textColor="@color/botones"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbJ1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="35dp"
            android:text="@string/pintado" />

    </LinearLayout>
    <!-- Línea para dividir la pantalla en la mitad -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/fondoBotones" />

    <!-- Segundo LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edNombreJ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/textoSecundario"
            android:hint="@string/nomJugador2" />

        <EditText
            android:id="@+id/edPuntosComandoJ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:textColor="@color/textoSecundario"
            android:inputType="number"
            android:hint="@string/Cp" />

        <TextView
            android:id="@+id/faccionJ2"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="35dp"
            android:textStyle="bold"
            android:textColor="@color/botones"
            android:text="@string/faccion" />

        <CheckBox
            android:id="@+id/cbJ2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="35dp"
            android:text="@string/pintado" />

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnEmpezarPartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@color/fondoBotones"
        android:clickable="true"
        android:foregroundTint="@color/botones"
        android:src="@android:drawable/ic_menu_send"
        android:tint="@color/botones"/>

</LinearLayout>

