<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgorundApp"
    tools:context=".MainActivity"
    android:id="@+id/layoutPrincipal"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:layout_marginStart="38dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="38dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10sp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/switch_tricks"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:text="@string/btnLogin"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/titulos"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/singUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/btnRegister"
                    android:textAlignment="center"
                    android:textColor="@color/botones"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutLogIn"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/txtEmail"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName|textEmailAddress"
                        android:minHeight="48dp"
                        android:textColor="@color/texto"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/txtContrasenya"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/txtPassword"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/texto"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:textSize="11sp"
                    android:text="@string/txtOlvidarContrasenya"
                    android:textAlignment="textEnd"
                    android:textColor="@color/textoSecundario"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutSingUp"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/txtEmail"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName|textEmailAddress"
                        android:id="@+id/eMailSingUp"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/texto"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/txtContrasenya"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/passwordSingUp"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/titulos"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/TxtRepetirContrasenya"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/repePassword"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/texto"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:textSize="11sp"
                    android:text="Forget Password?"
                    android:textAlignment="textEnd"
                    android:textColor="#616161"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnlogin"
                android:text="@string/btnLogin"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:gravity="center"
                android:elevation="15dp"
                android:textColor="@color/titulos"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:shapeAppearanceOverlay="@style/Button5"
                android:backgroundTint="@color/fondoBotones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/txtO"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/textoSecundario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/googleBoto"
                    android:src="@drawable/ic_google"
                    android:layout_margin="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
                <ImageView
                    android:id="@+id/redditBoto"
                    android:src="@drawable/ic_reddit"
                    android:layout_margin="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>